# BasicDataStore

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/kirypto/: test.py
src/kirypto/basic_data_store/: __main__.py
src/kirypto/basic_data_store/adapter/: persistence.py  rest.py
src/kirypto/basic_data_store/adapter/sqlite3_queries/: auth_retrieve.sql  item_delete.sql  item_insert.sql  item_retrieve.sql  item_retrieve_all.sql  item_update.sql
src/kirypto/basic_data_store/application/: app_main.py  facades.py  factories.py  persistence.py  rest.py  routes.py
src/kirypto/basic_data_store/domain/: exceptions.py  objects.py
