[project]
name = "kirypto.basic_data_store"
version = "0.1.0"
authors = [
    { name = "kirypto", email = "kirypto@gmail.com" },
]
description = "A sample python rest data store using Flask and Sqlite3."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/kirypto/BasicDataStore"
"Bug Tracker" = "https://github.com/kirypto/BasicDataStore/issues"